--- a/Index.qmd
+++ b/Index.qmd
@@ -14,7 +14,7 @@ Science Writing and Communications
 
 [Resume](https://27597121-8f5c-47ba-9fe5-0094a738f3f7.filesusr.com/ugd/19fd2d_a713f140e5a94dd396ab7d048c7f0b59.pdf)
 
-Academic Work
+[Academic Work](https://jennaahart.github.io/ahartwebsite/AcademicWork.html)
 
 Journalism Work
 
