--- a/Index.qmd
+++ b/Index.qmd
@@ -16,7 +16,7 @@ Science Writing and Communications
 
 [Academic Work](https://jennaahart.github.io/ahartwebsite/AcademicWork.html)
 
-Journalism Work
+[Journalism Work](https://jennaahart.github.io/ahartwebsite/journalismwork.html)
 
 ![](IMG_0036.PNG){width="306"}
 
