--- a/journalismwork.qmd
+++ b/journalismwork.qmd
@@ -14,32 +14,32 @@ Kirac discussed her experience reporting on the earthquake and its aftermath dur
 
 According to Kirac, more than 35,000 people died, 100,000 were injured, and hundreds of thousands were displaced because of the 7.8-magnitude earthquake by the date of the teach-in. Over 50,000 total have died, [Al Jazeera](https://www.aljazeera.com/news/2023/2/25/death-toll-climbs-above-50000-after-turkey-syria-earthquakes) reported. The earthquake impacted a total of 13 million people throughout a region roughly the size of Ohio.
 
-\"It\'s like a bomb went off and there was a huge explosion,\" Kirac said. \"Their cities, their memories, and parts of their identities are gone.\"
+"It's like a bomb went off and there was a huge explosion," Kirac said. "Their cities, their memories, and parts of their identities are gone."
 
-The panelists also discussed how ongoing humanitarian, economic, and healthcare crises in Syria exacerbated the devastation of the earthquake. Deloffre said that northwest Syria---the exact region affected by the quake---hosts many citizens displaced by Syria\'s civil war. Residents were already living in camps and informal structures, 80 percent of which are women and children.
+The panelists also discussed how ongoing humanitarian, economic, and healthcare crises in Syria exacerbated the devastation of the earthquake. Deloffre said that northwest Syria---the exact region affected by the quake---hosts many citizens displaced by Syria's civil war. Residents were already living in camps and informal structures, 80 percent of which are women and children.
 
-\"There was increasing food insecurity, collapsing healthcare systems, a lack of access to safe water, and poor sanitation,\" Deloffre said.
+"There was increasing food insecurity, collapsing healthcare systems, a lack of access to safe water, and poor sanitation," Deloffre said.
 
 Although the condition of northwest Syria yielded an established humanitarian system, the earthquake crippled necessary infrastructure. The quake destroyed supply chains carrying critical aid to Syria when they were needed most.
 
 Feldman emphasized the importance of maintaining the momentum of humanitarian aid despite these interruptions, discussing how even though the quake is over, its aftermath continues to plague Turkish and Syrian citizens.
 
-\"We have to assume that this is a long-term process that will not resolve itself immediately or quickly,\" she said. \"Crises reoccur and repeat. They overlay and punctuate ongoing depravation and precarity.\"
+"We have to assume that this is a long-term process that will not resolve itself immediately or quickly," she said. "Crises reoccur and repeat. They overlay and punctuate ongoing depravation and precarity."
 
 Kirac explained that there are still citizens under rubble as search and rescue processes continue. Survivors of the initial quake find themselves without the proper sanitization, housing, and food resources, with some dying from hypothermia in the cold.
 
-\"People had to fend for themselves for four to five days,\" she said. \"They are too desperate to consider themselves lucky that they survived.\"
+"People had to fend for themselves for four to five days," she said. "They are too desperate to consider themselves lucky that they survived."
 
-\"Only 5 percent of the damaged sites in northwest Syria have been covered by search and rescue operations,\" Deloffre added.
+"Only 5 percent of the damaged sites in northwest Syria have been covered by search and rescue operations," Deloffre added.
 
-After the event, attendee Heather Üner discussed how the panelists\' perspectives related to her own experiences responding to the earthquake. The Elliott School of International Affairs graduate works in Izmir, Turkey for International Blue Crescent, a non-profit organization providing relief by distributing medicine, food, and hygiene kits to earthquake victims.
+After the event, attendee Heather Üner discussed how the panelists' perspectives related to her own experiences responding to the earthquake. The Elliott School of International Affairs graduate works in Izmir, Turkey for International Blue Crescent, a non-profit organization providing relief by distributing medicine, food, and hygiene kits to earthquake victims.
 
-\"We have been responding to the earthquake from the first hours, as we have offices established in the earthquake where we do the bulk of our Syrian refugee response work,\" she said.
+"We have been responding to the earthquake from the first hours, as we have offices established in the earthquake where we do the bulk of our Syrian refugee response work," she said.
 
-However, under the state of emergency, import laws have become stricter. Non-profit organizations are effectively able to provide fewer resources to victims. Still, Üner agreed with Feldman\'s point of adapting to victims\' needs.
+However, under the state of emergency, import laws have become stricter. Non-profit organizations are effectively able to provide fewer resources to victims. Still, Üner agreed with Feldman's point of adapting to victims' needs.
 
-\"The needs of the people will be changing rapidly as the situation changes,\" she said.
+"The needs of the people will be changing rapidly as the situation changes," she said.
 
-Fellow attendee and International and Comparative Education alumnus Shanaz Sulejmanovic shared her perspective as a medical education manager at the Syrian American Medical Society (SAMS). She drew back to Deloffre\'s concern for collapsing healthcare systems during a state of emergency.
+Fellow attendee and International and Comparative Education alumnus Shanaz Sulejmanovic shared her perspective as a medical education manager at the Syrian American Medical Society (SAMS). She drew back to Deloffre's concern for collapsing healthcare systems during a state of emergency.
 
-\"As we move into the next stage of the earthquake, SAMS is trying to fill a gap in a broken healthcare system that is even more broken now,\" she said.
+"As we move into the next stage of the earthquake, SAMS is trying to fill a gap in a broken healthcare system that is even more broken now," she said.
