--- a/journalismwork.qmd
+++ b/journalismwork.qmd
@@ -6,6 +6,8 @@ editor: visual
 
 [Home](https://jennaahart.github.io/ahartwebsite/Index.html)
 
+*This is an article I wrote for an Advanced News Writing class after attending a teach-in on the Syria and Turkey earthquakes.*
+
 ## GWU Alumni and Professors Respond to Earthquakes in Syria and Turkey at Teach-in
 
 New York Times reporter Nimet Kirac came home from an assignment to find her family in Turkey living in a restaurant, surrounded by rubble and ruin. Because of the February 6 earthquake in central Turkey and northern and western Syria, many of her community members with intact homes chose to live in swimming pools and gymnasiums in fear of future collapse.
