--- a/journalismwork.qmd
+++ b/journalismwork.qmd
@@ -6,7 +6,7 @@ editor: visual
 
 [Home](https://jennaahart.github.io/ahartwebsite/Index.html)
 
-*This is an article I wrote for an Advanced News Writing class after attending a teach-in on the Syria and Turkey earthquakes.*
+*This is an article I wrote for an Advanced News Writing class after attending a teach-in on the Syria and Turkey earthquakes. I conducted interviews with various GW faculty members and alumni.*
 
 ## GWU Alumni and Professors Respond to Earthquakes in Syria and Turkey at Teach-in
 
